// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table > should render 1`] = `
<div>
  <div
    class="table-wrapper"
    role="table"
  >
    <table
      cellpadding="0"
      class="w-full table-auto"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            class="relative p-3 m-0 w-1 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-row-reverse align-top flex-inline"
            >
              <div
                class=""
              >
                Header 1
              </div>
              <div
                class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <div
                  class="transition-transform rotate-180"
                  role="img"
                >
                  <div
                    style="height: 10px; width: 10px;"
                  >
                    <svg
                      id="chevron-down-small"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </th>
          <th
            class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border dark:text-theme-secondary-500 dark:border-theme-secondary-800"
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex align-top flex-inline"
            >
              <div
                class=""
              >
                Header 2
              </div>
              <div
                class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <div
                  class="transition-transform rotate-180"
                  role="img"
                >
                  <div
                    style="height: 10px; width: 10px;"
                  >
                    <svg
                      id="chevron-down-small"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </th>
          <th
            class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-row-reverse justify-end align-top flex-inline"
            >
              <div
                class=""
              >
                Header 3
              </div>
              <div
                class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <div
                  class="transition-transform rotate-180"
                  role="img"
                >
                  <div
                    style="height: 10px; width: 10px;"
                  >
                    <svg
                      id="chevron-down-small"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr>
          <td>
            1
          </td>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td>
            1
          </td>
          <td>
            2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table > should render empty rows if template is not provided 1`] = `
<div>
  <div
    class="table-wrapper"
    role="table"
  >
    <table
      cellpadding="0"
      class="w-full table-auto"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            class="relative p-3 m-0 w-1 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-row-reverse align-top flex-inline"
            >
              <div
                class=""
              >
                Header 1
              </div>
              <div
                class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <div
                  class="transition-transform rotate-180"
                  role="img"
                >
                  <div
                    style="height: 10px; width: 10px;"
                  >
                    <svg
                      id="chevron-down-small"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </th>
          <th
            class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border dark:text-theme-secondary-500 dark:border-theme-secondary-800"
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex align-top flex-inline"
            >
              <div
                class=""
              >
                Header 2
              </div>
              <div
                class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <div
                  class="transition-transform rotate-180"
                  role="img"
                >
                  <div
                    style="height: 10px; width: 10px;"
                  >
                    <svg
                      id="chevron-down-small"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </th>
          <th
            class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-row-reverse justify-end align-top flex-inline"
            >
              <div
                class=""
              >
                Header 3
              </div>
              <div
                class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <div
                  class="transition-transform rotate-180"
                  role="img"
                >
                  <div
                    style="height: 10px; width: 10px;"
                  >
                    <svg
                      id="chevron-down-small"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr />
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table > should render empty table if pagination returns undefined rows 1`] = `
<div>
  <div
    class="table-wrapper"
    role="table"
  >
    <table
      cellpadding="0"
      class="w-full table-auto"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            class="relative p-3 m-0 w-1 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-row-reverse align-top flex-inline"
            >
              <div
                class=""
              >
                Header 1
              </div>
              <div
                class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <div
                  class="transition-transform rotate-180"
                  role="img"
                >
                  <div
                    style="height: 10px; width: 10px;"
                  >
                    <svg
                      id="chevron-down-small"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </th>
          <th
            class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border dark:text-theme-secondary-500 dark:border-theme-secondary-800"
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex align-top flex-inline"
            >
              <div
                class=""
              >
                Header 2
              </div>
              <div
                class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <div
                  class="transition-transform rotate-180"
                  role="img"
                >
                  <div
                    style="height: 10px; width: 10px;"
                  >
                    <svg
                      id="chevron-down-small"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </th>
          <th
            class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-row-reverse justify-end align-top flex-inline"
            >
              <div
                class=""
              >
                Header 3
              </div>
              <div
                class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <div
                  class="transition-transform rotate-180"
                  role="img"
                >
                  <div
                    style="height: 10px; width: 10px;"
                  >
                    <svg
                      id="chevron-down-small"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      />
    </table>
  </div>
</div>
`;

exports[`Table > should split rows 1`] = `
<div>
  <div
    class="table-wrapper"
    role="table"
  >
    <table
      cellpadding="0"
      class="w-full table-auto"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            class="relative p-3 m-0 w-1 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-row-reverse align-top flex-inline"
            >
              <div
                class=""
              >
                Header 1
              </div>
              <div
                class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <div
                  class="transition-transform rotate-180"
                  role="img"
                >
                  <div
                    style="height: 10px; width: 10px;"
                  >
                    <svg
                      id="chevron-down-small"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </th>
          <th
            class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border dark:text-theme-secondary-500 dark:border-theme-secondary-800"
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex align-top flex-inline"
            >
              <div
                class=""
              >
                Header 2
              </div>
              <div
                class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <div
                  class="transition-transform rotate-180"
                  role="img"
                >
                  <div
                    style="height: 10px; width: 10px;"
                  >
                    <svg
                      id="chevron-down-small"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </th>
          <th
            class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-row-reverse justify-end align-top flex-inline"
            >
              <div
                class=""
              >
                Header 3
              </div>
              <div
                class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <div
                  class="transition-transform rotate-180"
                  role="img"
                >
                  <div
                    style="height: 10px; width: 10px;"
                  >
                    <svg
                      id="chevron-down-small"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr />
      </tbody>
    </table>
  </div>
</div>
`;
